--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": true,
   "description": "Сборка проектов Maffin",
   "devDependencies": {
-    "@babel/preset-env": "7.13.10",
+    "@babel/preset-env": "7.14.2",
     "@htmlacademy/editorconfig-cli": "1.*",
-    "autoprefixer": "10.0.*",
+    "autoprefixer": "10.2.*",
     "babel-core": "6.26.3",
     "babel-loader": "8.2.2",
     "browser-sync": "2.26.*",
@@ -19,7 +19,7 @@
     "gulp-rename": "2.0.*",
     "gulp-resolve-url": "0.0.*",
     "gulp-sass": "4.1.*",
-    "gulp-sourcemaps": "2.6.*",
+    "gulp-sourcemaps": "3.0.0",
     "gulp-svgstore": "7.0.*",
     "gulp-uglify-es": "2.0.*",
     "gulp-webp": "4.0.*",
